fixed overlap scrolling

--- a/src/app/customer/cart/cart.component.css
+++ b/src/app/customer/cart/cart.component.css
@@ -18,17 +18,21 @@ border-radius: 10px;
 
 .container /*ENTIRE CONTENT*/{
     display: flex;
-    margin: 50px 50px
+    margin: 136px 50px 0 0;
 }
 
 .summ-card {
     align-items: center;
-    position: sticky;
+    position: fixed;
     background: var(--color-yellow);
     box-shadow: 0 2rem 3rem var(--color-info-light);
     border-radius: var(--card-border-radius); 
-    width: 30%;
-    height: 10%;   
+    width: 25%;
+    height: 55%;
+    left: 35px;  
+    z-index: 1;
+    top: 150px;
+    padding: 0%;
 }
 
 
@@ -64,6 +68,7 @@ border-radius: 10px;
 
     /* CONTAINER FOR THE WHOLE TABLE */
 .orders-card {
+    position: inherit;
     width: 70%;
     height: 10%;
     margin-right: 50px;
@@ -74,8 +79,10 @@ table{
     overflow: hidden;
     border-radius: var(--card-border-radius); 
     width: 100%;
+    right: 20px;
     background-color: transparent !important;
-   
+    margin-top:10px;
+    margin-left:380px; 
 }
 
    /*REMOVES THE BOT BORDER OF THE LAST ITEM */
@@ -180,4 +187,3 @@ input::-webkit-inner-spin-button {
 input[type=number] {
     -moz-appearance: textfield;
 }
-
