--- a/src/app/customer/cusdetails/cusdetails.component.css
+++ b/src/app/customer/cusdetails/cusdetails.component.css
@@ -8,7 +8,8 @@
   /* grid-template:  1fr 1fr / 1fr 2fr; SHORTCUT */
   padding: 0 50px 50px;
   box-sizing: border-box;
-  margin: 50px 50px 0 0;
+  margin: 136px 50px 0 0;
+
 }
 
 /* ----------------------STORE INFO--------------------------- */
