--- a/src/app/customer/customer-prodlist/customer-prodlist.component.css
+++ b/src/app/customer/customer-prodlist/customer-prodlist.component.css
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction:row;
   padding-right: 10px;
+  padding-top: 105px;
+  z-index: 1000;
 }
 
 h1 {
